headers/x.h

typedef struct Ihandle_ Ihandle;
typedef int (*Icallback)(Ihandle*);
/************************************************************************/
/*                        Main API                                      */
/************************************************************************/

IUP_API int       IupOpen          (int *argc, char ***argv);
IUP_API void      IupClose         (void);
IUP_API int       IupIsOpened      (void);
IUPIMGLIB_API void IupImageLibOpen(void);
IUP_API int       IupMainLoop      (void);
IUP_API int       IupLoopStep      (void);
IUP_API int       IupLoopStepWait  (void);
IUP_API int       IupMainLoopLevel (void);
IUP_API void      IupFlush         (void);
IUP_API void      IupExitLoop      (void);
IUP_API void      IupPostMessage   (Ihandle* ih, const char* s, int i, double d, void* p);
IUP_API int       IupRecordInput(const char* filename, int mode);
IUP_API int       IupPlayInput(const char* filename);
IUP_API void      IupUpdate        (Ihandle* ih);
IUP_API void      IupUpdateChildren(Ihandle* ih);
IUP_API void      IupRedraw        (Ihandle* ih, int children);
IUP_API void      IupRefresh       (Ihandle* ih);
IUP_API void      IupRefreshChildren(Ihandle* ih);
IUP_API int       IupExecute(const char *filename, const char* parameters);
IUP_API int       IupExecuteWait(const char *filename, const char* parameters);
IUP_API int       IupHelp(const char* url);
IUP_API void      IupLog(const char* type, const char* format, ...);
IUP_API char*     IupLoad          (const char *filename);
IUP_API char*     IupLoadBuffer    (const char *buffer);
IUP_API char*     IupVersion       (void);
IUP_API char*     IupVersionDate   (void);
IUP_API int       IupVersionNumber (void);
IUP_API void      IupVersionShow   (void);
IUP_API void      IupSetLanguage   (const char *lng);
IUP_API char*     IupGetLanguage   (void);
IUP_API void      IupSetLanguageString(const char* name, const char* str);
IUP_API void      IupStoreLanguageString(const char* name, const char* str);
IUP_API char*     IupGetLanguageString(const char* name);
IUP_API void      IupSetLanguagePack(Ihandle* ih);
IUP_API void      IupDestroy      (Ihandle* ih);
IUP_API void      IupDetach       (Ihandle* child);
IUP_API Ihandle*  IupAppend       (Ihandle* ih, Ihandle* child);
IUP_API Ihandle*  IupInsert       (Ihandle* ih, Ihandle* ref_child, Ihandle* child);
IUP_API Ihandle*  IupGetChild     (Ihandle* ih, int pos);
IUP_API int       IupGetChildPos  (Ihandle* ih, Ihandle* child);
IUP_API int       IupGetChildCount(Ihandle* ih);
IUP_API Ihandle*  IupGetNextChild (Ihandle* ih, Ihandle* child);
IUP_API Ihandle*  IupGetBrother   (Ihandle* ih);
IUP_API Ihandle*  IupGetParent    (Ihandle* ih);
IUP_API Ihandle*  IupGetDialog    (Ihandle* ih);
IUP_API Ihandle*  IupGetDialogChild(Ihandle* ih, const char* name);
IUP_API int       IupReparent     (Ihandle* ih, Ihandle* new_parent, Ihandle* ref_child);
IUP_API int       IupPopup         (Ihandle* ih, int x, int y);
IUP_API int       IupShow          (Ihandle* ih);
IUP_API int       IupShowXY        (Ihandle* ih, int x, int y);
IUP_API int       IupHide          (Ihandle* ih);
IUP_API int       IupMap           (Ihandle* ih);
IUP_API void      IupUnmap         (Ihandle* ih);
IUP_API void      IupResetAttribute(Ihandle* ih, const char* name);
IUP_API int       IupGetAllAttributes(Ihandle* ih, char** names, int n);
IUP_API void      IupCopyAttributes(Ihandle* src_ih, Ihandle* dst_ih);
IUP_API Ihandle*  IupSetAtt(const char* handle_name, Ihandle* ih, const char* name, ...);
IUP_API Ihandle*  IupSetAttributes (Ihandle* ih, const char *str);
IUP_API char*     IupGetAttributes (Ihandle* ih);
IUP_API void      IupSetAttribute   (Ihandle* ih, const char* name, const char* value);
IUP_API void      IupSetStrAttribute(Ihandle* ih, const char* name, const char* value);
IUP_API void      IupSetStrf        (Ihandle* ih, const char* name, const char* format, ...);
IUP_API void      IupSetInt         (Ihandle* ih, const char* name, int value);
IUP_API void      IupSetFloat       (Ihandle* ih, const char* name, float value);
IUP_API void      IupSetDouble      (Ihandle* ih, const char* name, double value);
IUP_API void      IupSetRGB         (Ihandle* ih, const char* name, unsigned char r, unsigned char g, unsigned char b);
IUP_API void      IupSetRGBA        (Ihandle* ih, const char* name, unsigned char r, unsigned char g, unsigned char b, unsigned char a);
IUP_API char*     IupGetAttribute(Ihandle* ih, const char* name);
IUP_API int       IupGetInt      (Ihandle* ih, const char* name);
IUP_API int       IupGetInt2     (Ihandle* ih, const char* name);
IUP_API int       IupGetIntInt   (Ihandle* ih, const char* name, int *i1, int *i2);
IUP_API float     IupGetFloat    (Ihandle* ih, const char* name);
IUP_API double    IupGetDouble(Ihandle* ih, const char* name);
IUP_API void      IupGetRGB      (Ihandle* ih, const char* name, unsigned char *r, unsigned char *g, unsigned char *b);
IUP_API void      IupGetRGBA     (Ihandle* ih, const char* name, unsigned char *r, unsigned char *g, unsigned char *b, unsigned char *a);
IUP_API void  IupSetAttributeId(Ihandle* ih, const char* name, int id, const char *value);
IUP_API void  IupSetStrAttributeId(Ihandle* ih, const char* name, int id, const char *value);
IUP_API void  IupSetStrfId(Ihandle* ih, const char* name, int id, const char* format, ...);
IUP_API void  IupSetIntId(Ihandle* ih, const char* name, int id, int value);
IUP_API void  IupSetFloatId(Ihandle* ih, const char* name, int id, float value);
IUP_API void  IupSetDoubleId(Ihandle* ih, const char* name, int id, double value);
IUP_API void  IupSetRGBId(Ihandle* ih, const char* name, int id, unsigned char r, unsigned char g, unsigned char b);
IUP_API char*  IupGetAttributeId(Ihandle* ih, const char* name, int id);
IUP_API int    IupGetIntId(Ihandle* ih, const char* name, int id);
IUP_API float  IupGetFloatId(Ihandle* ih, const char* name, int id);
IUP_API double IupGetDoubleId(Ihandle* ih, const char* name, int id);
IUP_API void   IupGetRGBId(Ihandle* ih, const char* name, int id, unsigned char *r, unsigned char *g, unsigned char *b);
IUP_API void  IupSetAttributeId2(Ihandle* ih, const char* name, int lin, int col, const char* value);
IUP_API void  IupSetStrAttributeId2(Ihandle* ih, const char* name, int lin, int col, const char* value);
IUP_API void  IupSetStrfId2(Ihandle* ih, const char* name, int lin, int col, const char* format, ...);
IUP_API void  IupSetIntId2(Ihandle* ih, const char* name, int lin, int col, int value);