headers/x.v

[translated]
module iup

type Icallback = fn (voidptr) int
fn C.IupOpen(argc &int, argv &&&i8) int

pub fn iupopen(argc &int, argv &&&i8) int {
	return C.IupOpen(argc, argv)
}

fn C.IupClose() 

pub fn iupclose()  {
	C.IupClose()
}

fn C.IupIsOpened() int

pub fn iupisopened() int {
	return C.IupIsOpened()
}

fn C.IupImageLibOpen() 

pub fn iupimagelibopen()  {
	C.IupImageLibOpen()
}

fn C.IupMainLoop() int

pub fn iupmainloop() int {
	return C.IupMainLoop()
}

fn C.IupLoopStep() int

pub fn iuploopstep() int {
	return C.IupLoopStep()
}

fn C.IupLoopStepWait() int

pub fn iuploopstepwait() int {
	return C.IupLoopStepWait()
}

fn C.IupMainLoopLevel() int

pub fn iupmainlooplevel() int {
	return C.IupMainLoopLevel()
}

fn C.IupFlush() 

pub fn iupflush()  {
	C.IupFlush()
}

fn C.IupExitLoop() 

pub fn iupexitloop()  {
	C.IupExitLoop()
}

fn C.IupPostMessage(ih voidptr, s &i8, i int, d f64, p voidptr) 

pub fn iuppostmessage(ih voidptr, s &i8, i int, d f64, p voidptr)  {
	C.IupPostMessage(ih, s, i, d, p)
}

fn C.IupRecordInput(filename &i8, mode int) int

pub fn iuprecordinput(filename &i8, mode int) int {
	return C.IupRecordInput(filename, mode)
}

fn C.IupPlayInput(filename &i8) int

pub fn iupplayinput(filename &i8) int {
	return C.IupPlayInput(filename)
}

fn C.IupUpdate(ih voidptr) 

pub fn iupupdate(ih voidptr)  {
	C.IupUpdate(ih)
}

fn C.IupUpdateChildren(ih voidptr) 

pub fn iupupdatechildren(ih voidptr)  {
	C.IupUpdateChildren(ih)
}

fn C.IupRedraw(ih voidptr, children int) 

pub fn iupredraw(ih voidptr, children int)  {
	C.IupRedraw(ih, children)
}

fn C.IupRefresh(ih voidptr) 

pub fn iuprefresh(ih voidptr)  {
	C.IupRefresh(ih)
}

fn C.IupRefreshChildren(ih voidptr) 

pub fn iuprefreshchildren(ih voidptr)  {
	C.IupRefreshChildren(ih)
}

fn C.IupExecute(filename &i8, parameters &i8) int

pub fn iupexecute(filename &i8, parameters &i8) int {
	return C.IupExecute(filename, parameters)
}

fn C.IupExecuteWait(filename &i8, parameters &i8) int

pub fn iupexecutewait(filename &i8, parameters &i8) int {
	return C.IupExecuteWait(filename, parameters)
}

fn C.IupHelp(url &i8) int

pub fn iuphelp(url &i8) int {
	return C.IupHelp(url)
}

[c2v_variadic]
fn C.IupLog(type_ &i8, format &i8) 

pub fn iuplog(type_ &i8, format &i8)  {
	C.IupLog(type_, format)
}

fn C.IupLoad(filename &i8) &i8

pub fn iupload(filename &i8) &i8 {
	return C.IupLoad(filename)
}

fn C.IupLoadBuffer(buffer &i8) &i8

pub fn iuploadbuffer(buffer &i8) &i8 {
	return C.IupLoadBuffer(buffer)
}

fn C.IupVersion() &i8

pub fn iupversion() &i8 {
	return C.IupVersion()
}

fn C.IupVersionDate() &i8

pub fn iupversiondate() &i8 {
	return C.IupVersionDate()
}

fn C.IupVersionNumber() int

pub fn iupversionnumber() int {
	return C.IupVersionNumber()
}

fn C.IupVersionShow() 

pub fn iupversionshow()  {
	C.IupVersionShow()
}

fn C.IupSetLanguage(lng &i8) 

pub fn iupsetlanguage(lng &i8)  {
	C.IupSetLanguage(lng)
}

fn C.IupGetLanguage() &i8

pub fn iupgetlanguage() &i8 {
	return C.IupGetLanguage()
}

fn C.IupSetLanguageString(name &i8, str &i8) 

pub fn iupsetlanguagestring(name &i8, str &i8)  {
	C.IupSetLanguageString(name, str)
}

fn C.IupStoreLanguageString(name &i8, str &i8) 

pub fn iupstorelanguagestring(name &i8, str &i8)  {
	C.IupStoreLanguageString(name, str)
}

fn C.IupGetLanguageString(name &i8) &i8

pub fn iupgetlanguagestring(name &i8) &i8 {
	return C.IupGetLanguageString(name)
}

fn C.IupSetLanguagePack(ih voidptr) 

pub fn iupsetlanguagepack(ih voidptr)  {
	C.IupSetLanguagePack(ih)
}

fn C.IupDestroy(ih voidptr) 

pub fn iupdestroy(ih voidptr)  {
	C.IupDestroy(ih)
}

fn C.IupDetach(child voidptr) 

pub fn iupdetach(child voidptr)  {
	C.IupDetach(child)
}

fn C.IupAppend(ih voidptr, child voidptr) voidptr

pub fn iupappend(ih voidptr, child voidptr) voidptr {
	return C.IupAppend(ih, child)
}

fn C.IupInsert(ih voidptr, ref_child voidptr, child voidptr) voidptr

pub fn iupinsert(ih voidptr, ref_child voidptr, child voidptr) voidptr {
	return C.IupInsert(ih, ref_child, child)
}

fn C.IupGetChild(ih voidptr, pos int) voidptr

pub fn iupgetchild(ih voidptr, pos int) voidptr {
	return C.IupGetChild(ih, pos)
}

fn C.IupGetChildPos(ih voidptr, child voidptr) int

pub fn iupgetchildpos(ih voidptr, child voidptr) int {
	return C.IupGetChildPos(ih, child)
}

fn C.IupGetChildCount(ih voidptr) int

pub fn iupgetchildcount(ih voidptr) int {
	return C.IupGetChildCount(ih)
}

fn C.IupGetNextChild(ih voidptr, child voidptr) voidptr

pub fn iupgetnextchild(ih voidptr, child voidptr) voidptr {
	return C.IupGetNextChild(ih, child)
}

fn C.IupGetBrother(ih voidptr) voidptr

pub fn iupgetbrother(ih voidptr) voidptr {
	return C.IupGetBrother(ih)
}

fn C.IupGetParent(ih voidptr) voidptr

pub fn iupgetparent(ih voidptr) voidptr {
	return C.IupGetParent(ih)
}

fn C.IupGetDialog(ih voidptr) voidptr

pub fn iupgetdialog(ih voidptr) voidptr {
	return C.IupGetDialog(ih)
}

fn C.IupGetDialogChild(ih voidptr, name &i8) voidptr

pub fn iupgetdialogchild(ih voidptr, name &i8) voidptr {
	return C.IupGetDialogChild(ih, name)
}

fn C.IupReparent(ih voidptr, new_parent voidptr, ref_child voidptr) int

pub fn iupreparent(ih voidptr, new_parent voidptr, ref_child voidptr) int {
	return C.IupReparent(ih, new_parent, ref_child)
}

fn C.IupPopup(ih voidptr, x int, y int) int

pub fn iuppopup(ih voidptr, x int, y int) int {
	return C.IupPopup(ih, x, y)
}

fn C.IupShow(ih voidptr) int

pub fn iupshow(ih voidptr) int {
	return C.IupShow(ih)
}

fn C.IupShowXY(ih voidptr, x int, y int) int

pub fn iupshowxy(ih voidptr, x int, y int) int {
	return C.IupShowXY(ih, x, y)
}

fn C.IupHide(ih voidptr) int

pub fn iuphide(ih voidptr) int {
	return C.IupHide(ih)
}

fn C.IupMap(ih voidptr) int

pub fn iupmap(ih voidptr) int {
	return C.IupMap(ih)
}

fn C.IupUnmap(ih voidptr) 

pub fn iupunmap(ih voidptr)  {
	C.IupUnmap(ih)
}

fn C.IupResetAttribute(ih voidptr, name &i8) 

pub fn iupresetattribute(ih voidptr, name &i8)  {
	C.IupResetAttribute(ih, name)
}

fn C.IupGetAllAttributes(ih voidptr, names &&u8, n int) int

pub fn iupgetallattributes(ih voidptr, names &&u8, n int) int {
	return C.IupGetAllAttributes(ih, names, n)
}

fn C.IupCopyAttributes(src_ih voidptr, dst_ih voidptr) 

pub fn iupcopyattributes(src_ih voidptr, dst_ih voidptr)  {
	C.IupCopyAttributes(src_ih, dst_ih)
}

[c2v_variadic]
fn C.IupSetAtt(handle_name &i8, ih voidptr, name &i8) voidptr

pub fn iupsetatt(handle_name &i8, ih voidptr, name &i8) voidptr {
	return C.IupSetAtt(handle_name, ih, name)
}

fn C.IupSetAttributes(ih voidptr, str &i8) voidptr

pub fn iupsetattributes(ih voidptr, str &i8) voidptr {
	return C.IupSetAttributes(ih, str)
}

fn C.IupGetAttributes(ih voidptr) &i8

pub fn iupgetattributes(ih voidptr) &i8 {
	return C.IupGetAttributes(ih)
}

fn C.IupSetAttribute(ih voidptr, name &i8, value &i8) 

pub fn iupsetattribute(ih voidptr, name &i8, value &i8)  {
	C.IupSetAttribute(ih, name, value)
}

fn C.IupSetStrAttribute(ih voidptr, name &i8, value &i8) 

pub fn iupsetstrattribute(ih voidptr, name &i8, value &i8)  {
	C.IupSetStrAttribute(ih, name, value)
}

[c2v_variadic]
fn C.IupSetStrf(ih voidptr, name &i8, format &i8) 

pub fn iupsetstrf(ih voidptr, name &i8, format &i8)  {
	C.IupSetStrf(ih, name, format)
}

fn C.IupSetInt(ih voidptr, name &i8, value int) 

pub fn iupsetint(ih voidptr, name &i8, value int)  {
	C.IupSetInt(ih, name, value)
}

fn C.IupSetFloat(ih voidptr, name &i8, value f32) 

pub fn iupsetfloat(ih voidptr, name &i8, value f32)  {
	C.IupSetFloat(ih, name, value)
}

fn C.IupSetDouble(ih voidptr, name &i8, value f64) 

pub fn iupsetdouble(ih voidptr, name &i8, value f64)  {
	C.IupSetDouble(ih, name, value)
}

fn C.IupSetRGB(ih voidptr, name &i8, r u8, g u8, b u8) 

pub fn iupsetrgb(ih voidptr, name &i8, r u8, g u8, b u8)  {
	C.IupSetRGB(ih, name, r, g, b)
}

fn C.IupSetRGBA(ih voidptr, name &i8, r u8, g u8, b u8, a u8) 

pub fn iupsetrgba(ih voidptr, name &i8, r u8, g u8, b u8, a u8)  {
	C.IupSetRGBA(ih, name, r, g, b, a)
}

fn C.IupGetAttribute(ih voidptr, name &i8) &i8

pub fn iupgetattribute(ih voidptr, name &i8) &i8 {
	return C.IupGetAttribute(ih, name)
}

fn C.IupGetInt(ih voidptr, name &i8) int

pub fn iupgetint(ih voidptr, name &i8) int {
	return C.IupGetInt(ih, name)
}

fn C.IupGetInt2(ih voidptr, name &i8) int

pub fn iupgetint2(ih voidptr, name &i8) int {
	return C.IupGetInt2(ih, name)
}

fn C.IupGetIntInt(ih voidptr, name &i8, i1 &int, i2 &int) int

pub fn iupgetintint(ih voidptr, name &i8, i1 &int, i2 &int) int {
	return C.IupGetIntInt(ih, name, i1, i2)
}

fn C.IupGetFloat(ih voidptr, name &i8) f32

pub fn iupgetfloat(ih voidptr, name &i8) f32 {
	return C.IupGetFloat(ih, name)
}

fn C.IupGetDouble(ih voidptr, name &i8) f64

pub fn iupgetdouble(ih voidptr, name &i8) f64 {
	return C.IupGetDouble(ih, name)
}

fn C.IupGetRGB(ih voidptr, name &i8, r &u8, g &u8, b &u8) 

pub fn iupgetrgb(ih voidptr, name &i8, r &u8, g &u8, b &u8)  {
	C.IupGetRGB(ih, name, r, g, b)
}

fn C.IupGetRGBA(ih voidptr, name &i8, r &u8, g &u8, b &u8, a &u8) 

pub fn iupgetrgba(ih voidptr, name &i8, r &u8, g &u8, b &u8, a &u8)  {
	C.IupGetRGBA(ih, name, r, g, b, a)
}

fn C.IupSetAttributeId(ih voidptr, name &i8, id int, value &i8) 

pub fn iupsetattributeid(ih voidptr, name &i8, id int, value &i8)  {
	C.IupSetAttributeId(ih, name, id, value)
}

fn C.IupSetStrAttributeId(ih voidptr, name &i8, id int, value &i8) 

pub fn iupsetstrattributeid(ih voidptr, name &i8, id int, value &i8)  {
	C.IupSetStrAttributeId(ih, name, id, value)
}

[c2v_variadic]
fn C.IupSetStrfId(ih voidptr, name &i8, id int, format &i8) 

pub fn iupsetstrfid(ih voidptr, name &i8, id int, format &i8)  {
	C.IupSetStrfId(ih, name, id, format)
}

fn C.IupSetIntId(ih voidptr, name &i8, id int, value int) 

pub fn iupsetintid(ih voidptr, name &i8, id int, value int)  {
	C.IupSetIntId(ih, name, id, value)
}

fn C.IupSetFloatId(ih voidptr, name &i8, id int, value f32) 

pub fn iupsetfloatid(ih voidptr, name &i8, id int, value f32)  {
	C.IupSetFloatId(ih, name, id, value)
}

fn C.IupSetDoubleId(ih voidptr, name &i8, id int, value f64) 

pub fn iupsetdoubleid(ih voidptr, name &i8, id int, value f64)  {
	C.IupSetDoubleId(ih, name, id, value)
}

fn C.IupSetRGBId(ih voidptr, name &i8, id int, r u8, g u8, b u8) 

pub fn iupsetrgbid(ih voidptr, name &i8, id int, r u8, g u8, b u8)  {
	C.IupSetRGBId(ih, name, id, r, g, b)
}

fn C.IupGetAttributeId(ih voidptr, name &i8, id int) &i8

pub fn iupgetattributeid(ih voidptr, name &i8, id int) &i8 {
	return C.IupGetAttributeId(ih, name, id)
}

fn C.IupGetIntId(ih voidptr, name &i8, id int) int

pub fn iupgetintid(ih voidptr, name &i8, id int) int {
	return C.IupGetIntId(ih, name, id)
}

fn C.IupGetFloatId(ih voidptr, name &i8, id int) f32

pub fn iupgetfloatid(ih voidptr, name &i8, id int) f32 {
	return C.IupGetFloatId(ih, name, id)
}

fn C.IupGetDoubleId(ih voidptr, name &i8, id int) f64

pub fn iupgetdoubleid(ih voidptr, name &i8, id int) f64 {
	return C.IupGetDoubleId(ih, name, id)
}

fn C.IupGetRGBId(ih voidptr, name &i8, id int, r &u8, g &u8, b &u8) 

pub fn iupgetrgbid(ih voidptr, name &i8, id int, r &u8, g &u8, b &u8)  {
	C.IupGetRGBId(ih, name, id, r, g, b)
}

fn C.IupSetAttributeId2(ih voidptr, name &i8, lin int, col int, value &i8) 

pub fn iupsetattributeid2(ih voidptr, name &i8, lin int, col int, value &i8)  {
	C.IupSetAttributeId2(ih, name, lin, col, value)
}

fn C.IupSetStrAttributeId2(ih voidptr, name &i8, lin int, col int, value &i8) 

pub fn iupsetstrattributeid2(ih voidptr, name &i8, lin int, col int, value &i8)  {
	C.IupSetStrAttributeId2(ih, name, lin, col, value)
}

[c2v_variadic]
fn C.IupSetStrfId2(ih voidptr, name &i8, lin int, col int, format &i8) 

pub fn iupsetstrfid2(ih voidptr, name &i8, lin int, col int, format &i8)  {
	C.IupSetStrfId2(ih, name, lin, col, format)
}

fn C.IupSetIntId2(ih voidptr, name &i8, lin int, col int, value int) 

pub fn iupsetintid2(ih voidptr, name &i8, lin int, col int, value int)  {
	C.IupSetIntId2(ih, name, lin, col, value)
}
